# ML_FACTORY

./: .env  README.md  docker-compose.yml  load_iris.ipynb  main.py  pyproject.toml
data/: iris_test.csv
src/api/: Dockerfile  main.py
src/front/: Dockerfile  streamlit_app.py
src/train/: train.py
